# Sniper

./: .gitignore  CMakeLists.txt  README.md
src/: common.h  main.cpp  parser.cpp  parser.h  pattern.cpp  pattern.h  scanner.cpp  scanner.h  sniper.cpp  sniper.h
